deploy/k8s/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: simple-trade
  labels:
    app: api-gateway
    app.kubernetes.io/part-of: simple-trade
spec:
  selector:
    app: api-gateway
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: LoadBalancer
